--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div id="main-page">
 <div id="header">
     <h2 id="title-main">MentorVerse</h2>
-    <div id="search-bar"> <input id="Search" type="text" placeholder="Search..">
+    
+    <div id="search-bar"> 
+        <h3 id="Favorite">Favorite List</h3>
+        <input id="Search" type="text" placeholder="Search..">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
           </svg></div>
@@ -23,7 +26,7 @@
 </div>
 <div id="main">
  <h3 id="courses-title">courses</h3>
- 
+
 </div>
 <div id="detailed-page">
     
@@ -39,7 +42,9 @@
     <div id="video"></div>
 
 </div>
-
+<div id="Fav-page">
+ <h3 id="fav-title">Favorite List</h3>   
+</div>
     <div id="footer">footer</div>
    
 </div>
