--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2 id="title-main">MentorVerse</h2>
     
     <div id="search-bar"> 
+        <h3 id="Books">Library </h3>
         <h3 id="Favorite">Favorite List</h3>
         <input id="Search" type="text" placeholder="Search..">
         <button id="search-button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -27,9 +28,9 @@
 
 <div id="main">
     <div id="department">
- <h3 id="All-courses">All courses</h3>
+ <h3 id="All-courses">All Courses</h3>
  <h3 id="It-Dep">IT</h3>
- <h3 id="Second-Dep">second dep</h3>
+ <h3 id="Career-Dep">Career Development</h3>
 
 </div>
 </div>
@@ -51,6 +52,7 @@
 <div id="Fav-page">
  <h3 id="fav-title">Favorite List</h3>   
 </div>
+<div id="Books-page"></div>
     <div id="footer">footer</div>
    
 </div>
