--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="information-signIn">
         
        
-        <input id="username" type="text" placeholder="Email or phone number">
+        <input id="username" type="text" placeholder="Username">
         <br>
         <h5 id="right-wrongUser"></h5>
         <input id="password" type="password" placeholder="Password"><br>
